[package]
name = "appcovecompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
serde = "1.0.147"
serde_json = "1.0.88"
serde_yaml = "0.9.14"
thiserror = "1.0.37"

yaml-rust = "0.4.5"
